# TheGame

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  cmake-vs.bat  justfile  launch_out.txt  pyproject.toml
cmake/: FetchFmt.cmake  FetchJson.cmake  MsvcArchTools.cmake  StaticLinking.cmake  TheGameOptions.cmake
controller/: README.md  cli.py  client.py  config.py  ctl.py  launch_game.py  paths.py  pipe.py  pipe_io.py  stages.py
controller/commands/: __init__.py  common.py  copy_dll.py  copy_logs.py  kill.py  launch.py  list_stages.py  ping.py  processes.py  state.py  status.py  wait_stage.py
data/: proud_db.json
docs/: Readme.md  handoff-next-session.md  ida-symbol-map.md  proudnet-game-rmi.md  proudnet-hook-status.md  proudnet-ida-reimpl.md  proudnet-ida-symbol-map.md  proudnet-message-dispatch-map.md  proudnet-offline-protocol.md  proudnet-rmi-server-plan.md  proudnet-sdk-crossmap.md  rmi-ida-reimpl.md
docs/plans/: handoff-next-session.md  proudnet-game-rmi.md  proudnet-hook-status.md  proudnet-rmi-server-plan.md
docs/proudnet/: README.md  implementation.md  message-dispatch.md  message-type-crossmap.md  overview.md  protocol.md  proudnet-message-dispatch-map.md  proudnet-offline-protocol.md  proudnet-sdk-crossmap.md  stages.md
docs/rmi/: README.md  actions.md  autonav.md  client.md  fake-server-hooks.md  overview.md  server.md  stages.md
include/: console.h  diagnostics.h  hook_manager.h
include/ProudNet/: ConnectionNode.hpp  DrainReceiveQueue.hpp  FastSend.hpp  FastSocket.hpp  GrowableBuffer.hpp  Layout.hpp  MessageType.hpp  ProcessProudNetLayer.hpp  RecvAppend.hpp  RmiInject.hpp  SelectContext.hpp  SelectFd.hpp  SocketError.hpp  TcpLayerMessageExtractor.hpp  TcpTrace.hpp  UpnpClient.hpp
include/RMI/: Inject.hpp  Log.hpp  Nav.hpp  NavCommands.hpp
include/crt/: memory.h
include/diagnostics/: exceptions.hpp  handler_pipe.hpp  handlers.hpp  namedpipe.hpp
include/game/: server_override.hpp
include/game/engine/: AtomicOperations.h  AtomicOperations.inl  MemoryDefines.h  StringConverters.h  TCPSocket.h  WString.h  WString.inl  multibyteholder.h  rcstring.h  string.h  widestringholder.h
include/game/net/: net_user_connect_res.hpp  pn_connection.hpp  pn_drain_recv.hpp  pn_fast_send.hpp  pn_fast_socket.hpp  pn_growable.hpp  pn_layout.hpp  pn_message_type.hpp  pn_process_message.hpp  pn_recv_append.hpp  pn_rmi_inject.hpp  pn_select.hpp  pn_select_fd.hpp  pn_socket_error.hpp  pn_tcp_frame.hpp  pn_tcp_trace.hpp  pn_upnp.hpp  proud_connect.hpp  proud_frame.hpp  proud_frame_parse.hpp  proud_message.hpp  socket_trace.hpp
include/helpers/: strhelp.h
include/thegame/: config.hpp  log.hpp  paths.hpp  proud_db.hpp
journals/: template.md
journals/long/: 2026-05-27-01-connect-stage-protocol.md  2026-05-27-02-offline-ip-and-stage-hooks.md  2026-05-27-03-proud-framing-and-recv-trace.md  2026-05-27-04-net-user-connect-res-struct.md  2026-05-27-05-net-user-connect-res-layout.md  2026-05-27-07-offline-proud-handshake.md  2026-05-27-08-pn-select-full-replacement.md  2026-05-27-09-pn-upnp-full-reimpl.md  2026-05-27-net-user-connect-res-layout.md  2026-05-27-net-user-connect-res-struct.md  2026-05-27-offline-proud-handshake.md  2026-05-27-pn-select-full-replacement.md  2026-05-27-pn-upnp-full-reimpl.md  2026-05-27-proud-framing-and-recv-trace.md  2026-05-27-proudnet-impl-pass.md  2026-05-28-02-pn-recv-append-full-replacement.md  2026-05-28-pn-recv-append-full-replacement.md  2026-05-28-w-connect-3-full-replacement.md  2026-05-29-01-c2s-rmi-capture-wrong-proxy.md  2026-05-29-02-c2s-rmi-per-action-ids-run179.md  2026-05-29-03-cgameroom-uivm-crash-thread.md  2026-05-29-04-ui-automation-investigation.md  2026-05-29-05-wire-s2c-rmi-builders.md  2026-05-29-c2s-rmi-capture-wrong-proxy.md  2026-05-29-c2s-rmi-per-action-ids-run179.md  2026-05-29-cgameroom-uivm-crash-thread.md  2026-06-02-01-nav-pass-shard-select.md  README.md
launch/: diagnostics_controller.py  launch_game.py
launch/ctl/: __init__.py  client.py  commands.py  diagnostics_session.py  paths.py  pipe_io.py  protocol.py  server.py  thegame_ctl.py
src/: console.cpp  diagnostics.cpp  hook_manager.cpp  hooks.cpp  main.cpp
src/ProudNet/: ConnectionNode.cpp  DrainReceiveQueue.cpp  FastSend.cpp  FastSocket.cpp  GrowableBuffer.cpp  ProcessProudNetLayer.cpp  RecvAppend.cpp  RmiInject.cpp  SelectContext.cpp  SelectFd.cpp  SocketError.cpp  TcpLayerMessageExtractor.cpp  TcpTrace.cpp  UpnpClient.cpp
src/RMI/: FrameworkSendHook.cpp  GameSendHook.cpp  Inject.cpp  Log.cpp  Nav.cpp  NavCommands.cpp
src/crt/: memory.cpp
src/diagnostics/: exceptions.cpp  handler_pipe.cpp  handlers.cpp  namedpipe.cpp
src/game/: server_override.cpp
src/game/engine/: MemoryDefines.cpp  StringConverters.cpp  TCPSocket.cpp  WString.cpp  multibyteholder.cpp  rcstring.cpp  string.cpp  widestringholder.cpp
src/game/net/: pn_connection.cpp  pn_drain_recv.cpp  pn_fast_send.cpp  pn_fast_socket.cpp  pn_growable.cpp  pn_process_message.cpp  pn_recv_append.cpp  pn_rmi_inject.cpp  pn_select.cpp  pn_select_fd.cpp  pn_socket_error.cpp  pn_tcp_frame.cpp  pn_tcp_trace.cpp  pn_upnp.cpp  proud_connect.cpp  socket_trace.cpp
src/helpers/: strhelp.cpp
src/hooks/: entrypoint.cpp  game_state.cpp  strlen.cpp  w_connect_1.cpp  w_connect_2.cpp  w_connect_3.cpp
src/hooks/net/: pn_compress_hook.cpp  pn_drain_recv_hook.cpp  pn_game_rmi_send_hook.cpp  pn_net_client_factory.cpp  pn_process_message_hook.cpp  pn_tcp_frame_hook.cpp
src/hooks/socket/: pn_connection_fsm.cpp  pn_recv_append.cpp  pn_recv_complete.cpp  (+7 more)
src/thegame/: config.cpp  dll_main.cpp  log.cpp  paths.cpp  proud_db.cpp
stubs/: netstuff.h  system_hooks.h  target_hooks.h
tools/: ida_scan_rmi_send_types.py  migrate_proudnet_layout.py
tools/textwall-graph/: .gitignore  README.md  justfile  pyproject.toml
tools/textwall-graph/config/: default.yaml  merge_small.yaml  wcc.yaml
tools/textwall-graph/ida/: apply_clusters.py  export_callgraph.py
tools/textwall-graph/textwall_graph/: __init__.py  clusterize.py  load.py  merge.py  models.py  tarjan.py  wcc.py
(+8 files in other folders)
