[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "textwall-graph"
version = "0.1.0"
description = "Call-graph export (IDA) and SCC/WCC clustering for .text segmentation"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
textwall-cluster = "textwall_graph.clusterize:main"

[tool.setuptools.packages.find]
where = ["."]
